# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
hexlet-code/: Makefile  README.md  build.sh
hexlet-code/page_analyzer/: __init__.py  app.py
page_analyzer/: __init__.py  app.py  parser.py  url_repository.py  validator.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: show.html  urls_list.html
